second commit added lieks count to post table

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,3 +1,3 @@
 
 
-<%= react_component("HomepageBody", {title: "Hello World"}) %>
+<%= react_component("HomepageBody", {userid: current_user.id}) %>
