--- a/app/views/industries/show.html.erb
+++ b/app/views/industries/show.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("IndustryMain", {title: @Title, userid: current_user.id, allPost: @allPost, allPostlikes: @allPostlikes, user: @targetUser, username: current_user.firstname}) %>
+<%= react_component("IndustryMain", {title: @Title, userid: current_user.id, allPost: @allPost, allPostlikes: @allPostlikes, user: @targetUser, username: current_user.firstname, theIndustry: @theIndustry}) %>
