--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-light" style="background-color: rgb(246, 113, 4);">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -8,13 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="/" ><img src="https://s-media-cache-ak0.pinimg.com/originals/63/98/f6/6398f61cdd8d9ea570d48b7c68d33132.png" width="30" height="30" style="margin-top: -0.5em;" alt=""></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/industries">Industries</a></li>
+        <li class="nav-item"><a href="/industries">Industries</a></li>
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -29,16 +29,16 @@
         </li> -->
       </ul>
       <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+        <div id="navSearchDiv" class="form-group">
+          <input id="select_origin" type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Search</button>
+        <button type="submit" class="btn btn-success">Search</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <%= link_to "Sign Out", destroy_user_session_path , class: "btn btn-primary", method: :delete, style: "margin-top: 0.5em;" %>
+        <%= link_to "Sign Out", destroy_user_session_path , class: "btn btn-danger", method: :delete, style: "margin-top: 0.5em;" %>
 
         <% if user_signed_in? %>
-        <li><a href="/users/<%= current_user.id %>">Profile</a></li>
+        <li><a href="/users/<%= current_user.id %>"><img src="<%= current_user.profilepic %>" width="30" height="30" style="margin-top: -0.5em; border: 1px white solid;"/> <%= current_user.firstname %></a></li>
         <li><a href="/messages">Messages</a></li>
           <% end %>
         <!-- <li class="dropdown">
