--- a/app/views/partials/_nav2.html.erb
+++ b/app/views/partials/_nav2.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-light" style="background-color: rgb(246, 113, 4);">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="/" ><img src="https://s-media-cache-ak0.pinimg.com/originals/63/98/f6/6398f61cdd8d9ea570d48b7c68d33132.png" width="30" height="30" style="margin-top: -0.5em;" alt=""></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -28,9 +28,9 @@
           </ul>
         </li> -->
       </ul>
-
       <ul class="nav navbar-nav navbar-right">
-        <%= link_to "Register", new_user_registration_path , class: "btn btn-info", method: :get, style: "margin-top: 0.5em;" %>
+        <%= link_to "Login", new_user_session_path , class: "btn btn-success", method: :get, style: "margin-top: 0.5em;" %>
+        <%= link_to "Register", new_user_registration_path , class: "btn btn-success", method: :get, style: "margin-top: 0.5em;" %>
 
         <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
