set industry border

--- a/app/views/industries/index.html.erb
+++ b/app/views/industries/index.html.erb
@@ -4,7 +4,7 @@
       <a href="/industries/<%= industry.name %>">
         <div class="singleindustry">
           <div >
-            <img style="width: 18em; height: 18em; border-radius: 9em;" src="<%= industry.image %>"/>
+            <img style="width: 18em; height: 18em; border-radius: 9em; border: 1px solid black;" src="<%= industry.image %>"/>
             <p><%= industry.name %></p>
           </div>
         </div>
