--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -46,6 +46,7 @@
   color: white;
   border-top-left-radius: 1em;
   border-top-right-radius: 1em;
+  border: 1px black solid;
 }
 
 .MessageMainContent {
